Added coverage dependency and fixed typing errors

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -48,3 +48,8 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 asyncio_mode = "auto"
+
+[dependency-groups]
+dev = [
+    "pytest-cov (>=7.0.0,<8.0.0)"
+]
