--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,7 +11,7 @@
         "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json}\"",
         "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
         "type-check": "tsc --noEmit",
-        "check": "npm run format:check && npm run lint:check",
+        "check": "npm run format:check && npm run lint:check && npm run type-check",
         "fix": "npm run format:fix && npm run lint:fix",
         "update-ip": "./scripts/update-env-ip.sh",
         "start": "./scripts/update-env-ip.sh --quiet && expo start",
