--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ pytest = "^8.0.0"
 pytest-asyncio = "^0.23.0"
 httpx = "^0.27.0"
 aiosqlite = "^0.19.0"
+ruff = "^0.14.12"
 
 [build-system]
 requires = ["poetry-core"]
